--- a/about.html
+++ b/about.html
@@ -62,9 +62,8 @@
             </div>
            
             <div class="me Head">
-                This Website is made by <a href="https://www.linkedin.com/in/pushpendra-yadav-iet/" target="_blank">Pushpendra Babu</a>, as a part of Internship Project given by: <br>
-                <a href="https://www.thesparksfoundationsingapore.org/" target="_blank">The Sparks Foundation</a><br>
-                Email: yp22952@gmail.com@gmail.com
+                This Website is made by <a href="https://www.linkedin.com/in/pushpendra-yadav-iet/" target="_blank">Vishal kharkya</a>,
+                Email: vkharkya9@gmail.com
             </div>
       </section>
 
